# OmniCare

./: .gitignore  .gitmodules  README.md  setup.sh  startup.sh
eletrica/: .$Diagrama_Eletrico_TCC.drawio.bkp
firmware/ARDUINO_IHR_Firmware/: firmware_hri.ino
firmware/ARDUINO_IHR_Firmware/firmware_hri/: firmware_hri.ino
firmware/STM_Maip_L0_Firmware/: .cproject
firmware/STM_Maip_L0_Firmware/Core/Src/: main.c
firmware/STM_Manip_Firmware/AZURE_RTOS/App/: app_azure_rtos_config.h
firmware/STM_Robot_Firmware/: .mxproject  .project  STM_Robot_Firmware.ioc  STM_Robot_Firmware_Newer.launch  USBX_CDC_ROBOT.launch
firmware/STM_Test_Driver_L0_Firmware/: .cproject  .project
hardware/: Diagrama_Eletrico_TCC.drawio  README.md
mechanics/: README.md
scripts/: scripts.sh  sync_omnicare.sh
software/: record_navigation.sh  record_vision.sh
software/src/full_robot/: config.json  package.xml  setup.cfg  setup.py
software/src/manip_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
software/src/omnicare_behavior/: README.md  package.xml  setup.cfg  setup.py
software/src/omnicare_bringup/: README.md  setup.py
software/src/omnicare_manipulator/: config.json  package.xml  setup.cfg  setup.py
software/src/omnicare_msgs/: CMakeLists.txt
software/src/omnicare_msgs/action/: EnterElevator.action  RunMission.action
software/src/omnicare_msgs/msg/: FloorDetectorInfo.msg
software/src/omnicare_msgs/srv/: Checkpoints.srv  LEDandBuzz.srv  MoveArm.srv  OmniMove.srv  OnOffNode.srv  SwitchFloor.srv  TeleportFloor.srv
software/src/omnicare_simulation/: setup.py
(+275 files in other folders)
